web-infras/parser/tests/fixtures/babel/es2015/uncategorised/249/output.txt
[SyntaxError]: Octal literals are not allowed in strict mode (1,22)
1|"use strict"; (a) => 00
 |                    ^
